Coverity analysis defect 141131: Data race condition

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-11-10
    • 1
    • 🟩 Routing and Topology
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/util/read_through_cache.cpp:106: MISSING_LOCK 141131 Accessing "this->taskInfo->opCtxToCancel" without holding lock "mongo::ReadThroughCacheBase::CancelToken::TaskInfo.cancelTokenMutex". Elsewhere, "mongo::ReadThroughCacheBase::CancelToken::TaskInfo.opCtxToCancel" is written to with "TaskInfo.cancelTokenMutex" held 2 out of 2 times (2 of these accesses strongly imply that it is necessary).

            Assignee:
            Wolfee Farkas
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: