SERVER-112390 Adding clarification comments about taking locks (#43241)

Co-authored-by: Kaloian Manassiev <kaloian.manassiev@mongodb.com>
GitOrigin-RevId: bf7d8b24ddd63fb8b1624cdafd0d1834e13102f6